Fix some cases of overflowing hendelse text breaking styles here and there

--- a/www/css/admin.css
+++ b/www/css/admin.css
@@ -25,6 +25,8 @@
 
 .event-info {
 	grid-column: 1;
+	overflow-x: hidden; /*force text wrap*/
+	word-wrap: break-word;
 }
 
 .event-info h3 {
